--- a/src/app/pokemon/pokemon-display/pokemon-display.component.html
+++ b/src/app/pokemon/pokemon-display/pokemon-display.component.html
@@ -1,12 +1,24 @@
-<form [formGroup]="pokemonForm" (ngSubmit)="onSubmit()" *ngIf="model">
-    <div class="row">
-        <div class="col-4">
+
+<div class="row">
+    <div class="col-4">
+    </div>
+    <div class="col-4">
+        <div class="card flex-row" *ngIf="pokemon">
+            <div class="card-body">
+                <h5 class="card-title">
+                    {{ pokemon.name }}
+                </h5>
+                <div class="card-text">
+                    <div class="{{ pokemon.type1! | pokemonTypeColor }} rounded-pill">
+                        {{ pokemon.type1 }}
+                    </div>
+                    <div class="{{ pokemon.type2! | pokemonTypeColor }} rounded-pill">
+                        {{ pokemon.type2 }}
+                    </div>
+                </div>
+            </div>
         </div>
-        <div class="col-4">
-            <!-- <div class="form-group">
-                <label for="id">ID</label>
-                <input type="number" class="form-control" id="id" formControlName="id" name="id">
-            </div> -->
+        <form [formGroup]="pokemonForm" (ngSubmit)="onSubmit()" *ngIf="model">
             <div class="form-group">
                 <label for="name">Nom</label>
                 <input type="text" class="form-control" id="name" formControlName="name" name="name">
@@ -22,8 +34,12 @@
             <div class="form-group">
                 <button type="button" class="btn btn-secondary" (click)="resetForm()">Reset</button>
                 <button class="btn btn-primary">Envoyer</button>
-            </div> 
-        </div>
-        <div class="col"></div>
+            </div>
+            <div>
+                <button type="button" class="btn btn-secondary" (click)="goToPokemonList()">Retour</button>
+            </div>
+        </form>  
     </div>
-</form>
+    <div class="col"></div>
+</div>
+
