--- a/src/app/pokemon/pokemon-list/pokemon-list.component.html
+++ b/src/app/pokemon/pokemon-list/pokemon-list.component.html
@@ -2,6 +2,9 @@
     <div>
         <button type="button" class="btn btn-secondary" (click)="goToCreate()">Create</button>
     </div>
+    <div>
+        <button type="button" class="btn btn-secondary" (click)="goToAdmin()">Admin</button>
+    </div>
     <!--Container pour la grid-->
     <div class="row g-5 row-cols-1 row-cols-md-3 g-4">
         <!--g-5 pour le padding-->
